--- a/client/client.html
+++ b/client/client.html
@@ -113,7 +113,13 @@
           // Add a connect listener
           socket.on('message',function(data) {
             console.log('Received a message from the server!',data);
-            if(data.map) {
+            if(data.status) {
+              if(data.status === "full") {
+                alert("Server is full...");
+                socket = null;
+              }
+            }
+            else if(data.map) {
               _fw = c.width / data.map[0].length;
               _fh = c.height / data.map.length;
               _fw = Math.min(_fw, _fh);
@@ -208,7 +214,7 @@
   <body>
     <canvas id="canvas" width="100%" height="100%"></canvas>
     <div class="status">
-      <b>Online: <span id="onlineCount"></span></b>/20 <br />
+      <b>Online: <span id="onlineCount"></span></b>/60 <br />
       <b>Kills: <span id="kills">0</span></b> <br />
       <b>W</b> Up <br />
       <b>A</b> Left <br />
