no more configuration to do

--- a/client/index.html
+++ b/client/index.html
@@ -37,15 +37,17 @@
         content: attr(id);
       }
     </style>
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="lodash.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script canvas="canvas">
 
 
         $(document).ready(function() {
+          var host = window.location.hostname;
+          var port = window.location.port;
 
-          var socket = new io.connect('http://localhost:8080');
+          var socket = new io.connect('http://'+host+':'+port);
           var floor = new Image();
               floor.src = "textures/floor.jpg";
           var wall = new Image();
